--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>This is Rem</title>
-  <meta name="description" content="DG4NG STORE menyediakan tools & file injector rahasia untuk para Pro Player FF. Upgrade gameplaymu sekarang!" />
-  <meta name="keywords" content="DG4NG Store, Free Fire, Tools, Injector, Pro Player, Gaming" />
+  <meta name="description" content="Web about me!" />
+  <meta name="keywords" content="Porto" />
 
   
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
@@ -229,4 +229,5 @@ I turn coffee and ideas  into cool, responsive websites. Obsessed with smooth UI
   </script>
 </body>
 </html>
+
 
